Fix android build